syntax = "proto3";

option csharp_namespace = "ProductService";

service ProductServiceGrpc {
    rpc GetProductsByMultipleIds (GetProductByMultipleIdsRequest) returns (GetProductsByMultipleIdsResponse);
    rpc ProductsExist (ProductsExistRequest) returns (ProductsExistResponse);
}

message GetProductByMultipleIdsRequest {
    repeated string ids = 1;
}

message ProductsExistRequest {
	repeated string ids = 1;
}


message GrpcProductModel{
    string productId = 1;
    string name = 2;
    string description = 3;
}

message GetProductsByMultipleIdsResponse {
    repeated GrpcProductModel products = 1;
}

message ProductsExistResponse {
    bool productsExist = 1;
}